Fixing style on mobile screen on navigation bar

--- a/src/components/header/header.styles.scss
+++ b/src/components/header/header.styles.scss
@@ -43,7 +43,7 @@
     .nav-container {
         position: absolute;
         z-index: 9;
-        top: 6%;
+        top: 5.5%;
         left: 0;        
         display: flex;          
         flex-direction: column;
